--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Jogo Erótico</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+<body>
+  <div class="card">
+    <h1 id="card-title"></h1>
+    <img id="card-image" src="" alt="Carta erótica">
+    
+    <p id="card-description"></p>
+  </div>
+  <button id="next-button">
+    <span class="material-icons">shuffle</span>
+    Alternar
+  </button>
+  <script src="script.js"></script>
+</body>
+</html>
 
