--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <script>
     const cards = [
   {
-    image: "https://link-da-imagem-1.jpg",
-    title: "Massagem Sensual",
+    image: "sexstellung-hund,351794_m_n.jpg",
+    title: "Dogi",
     description: "Use óleos aromáticos e explore o corpo do parceiro com toques suaves e atentos."
   },
   {
