--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
     image: "https://link-da-imagem-2.jpg",
     title: "Jogo de Dominação",
     description: "Um assume o controle e o outro se entrega. Estabeleçam limites e explorem fantasias."
+  },
+  {
+    image: "/",
+    title:: "/",
+    description: "/"
   }
 ];
 
