--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <span class="material-icons">shuffle</span>
     Alternar
   </button>
+  <script src="s.js"></script>
   <script>
     const cards = [
   {
