--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <span class="material-icons">shuffle</span>
     Alternar
   </button>
-  <script src="s.js"></script>
+  <script src="sj.js"></script>
   <script>
     const cards = [
   {
